mdix-go/internal/include/mdix_ffi.h

// Output format mode for mdix_to_mdix() and mdix_format_source().
enum MdixFormatMode {
    MDIX_FORMAT_MODE_DEFAULT = 0,
    MDIX_FORMAT_MODE_PRETTY = 1,
    MDIX_FORMAT_MODE_COMPACT = 2,
    MDIX_FORMAT_MODE_MINIFIED = 3,
};
typedef int32_t MdixFormatMode;
// Returns a static pointer to the DixScript FFI version string.
// Do NOT pass this pointer to mdix_free_string() — it is a static allocation.
 const char *mdix_version(void) ;
// Returns all keys in the flat data map as a null-terminated C string array.
// Writes the count to out_count. Caller must free with mdix_free_string_array.
// Includes synthetic indexed keys (tags[0], server.host, etc.).
 char **mdix_get_all_keys(const void *handle, int32_t *out_count) ;
// Returns the element count of an Array or Tuple at path, or -1 if the path
// does not exist, is not a collection, or the handle is null.
 int32_t mdix_get_array_length(const void *handle, const char *path) ;
// Select all values matching a dotted path pattern and return them as a JSON array.
//
// Use `*` as a wildcard for a single path segment:
//   "server.*"   → all direct children of the server table property
//   "weapons.*"  → all direct children of the weapons object
//
// LIMITATION: bracket-indexed paths (enemies[0].name) do not match dot
// wildcards. Use mdix_get_array_length + mdix_get_* with explicit indexed
// paths for array item access from the C# side.
//
// Caller must free the returned string with mdix_free_string().
 char *mdix_select_many_as_json(const void *handle, const char *pattern) ;
// Returns true if a value exists at path.
 bool mdix_exists(const void *handle, const char *path) ;
// Returns the direct child key names under prefix as a C string array.
// Pass an empty string for top-level keys.
// Writes the count to out_count. Caller must free with mdix_free_string_array().
 char **mdix_get_keys(const void *handle, const char *prefix, int32_t *out_count) ;
// Free a C string returned by any mdix getter function.
// Do NOT call on the static pointer from mdix_version(). Passing null is safe.
 void mdix_free_string(char *s) ;
// Free a string array returned by mdix_get_keys() or mdix_get_all_keys().
// count must match the value written to out_count by the original call.
 void mdix_free_string_array(char **arr, int32_t count) ;
// Returns a pointer to the last error string set on this thread, or null if
// no error is pending. Valid only until the next mdix_* call on this thread.
// Do NOT free this pointer.
 const char *mdix_get_last_error(void) ;
// Clear the pending error on this thread.
 void mdix_clear_error(void) ;
// Export the loaded data as a JSON string.
// Enum values are emitted as plain integers (not as JSON objects).
// Pass indented=true for pretty-printed output.
// Caller must free with mdix_free_string().
 char *mdix_to_json(const void *handle, bool indented) ;
// Export the loaded data as .mdix source text.
// Caller must free with mdix_free_string().
//
// FIX: previously returned *mut c_void — corrected to *mut c_char.
 char *mdix_to_mdix(const void *handle, MdixFormatMode mode) ;
// Export the loaded data as TOML.
// Caller must free with mdix_free_string().
 char *mdix_to_toml(const void *handle) ;
// Format .mdix source text according to the given mode.
// Minified mode removes all unnecessary whitespace.
// Compact mode collapses blank lines and strips trailing whitespace.
// Caller must free with mdix_free_string().
 char *mdix_format_source(const char *source, MdixFormatMode mode) ;
// Minify .mdix source — remove all unnecessary whitespace using the tokenizer.
// Caller must free with mdix_free_string().
 char *mdix_minify_source(const char *source) ;
// Compact .mdix source — strip trailing whitespace and collapse blank lines.
// Preserves indentation and code structure. Lighter than minify.
// Caller must free with mdix_free_string().
 char *mdix_compact_source(const char *source) ;
// Strip all comments from .mdix source. Content inside string literals is preserved.
// Caller must free with mdix_free_string().
 char *mdix_strip_comments(const char *source) ;
// Create an empty builder for constructing new save data.
// Caller must free with mdix_builder_free when done.
 void *mdix_builder_new(void) ;
// Create a builder pre-populated from an existing loaded handle.
//
// Copies all root-level structural values from the handle into the builder.
// Synthetic indexed children (tags[0], server.host, etc.) are stripped so
// only values that map to valid .mdix identifiers remain editable.
//
// Typical use: load a save file → fork into builder → change a few fields
// → mdix_builder_save back to disk. The original handle remains valid.
//
// Caller must free the returned builder with mdix_builder_free when done.
 void *mdix_builder_from_handle(const void *handle) ;
// Free a builder created by mdix_builder_new or mdix_builder_from_handle.
// Passing null is safe. Do not call twice on the same pointer.
 void mdix_builder_free(void *builder) ;
// Returns the number of entries currently in the builder, or -1 if null.
 int32_t mdix_builder_entry_count(const void *builder) ;
// Clear all entries from the builder. Returns true on success.
 bool mdix_builder_clear(void *builder) ;
 bool mdix_builder_set_string(void *builder, const char *path, const char *value) ;
 bool mdix_builder_set_int(void *builder, const char *path, int32_t value) ;
 bool mdix_builder_set_long(void *builder, const char *path, int64_t value) ;
 bool mdix_builder_set_float(void *builder, const char *path, float value) ;
 bool mdix_builder_set_double(void *builder, const char *path, double value) ;
 bool mdix_builder_set_bool(void *builder, const char *path, bool value) ;
// Remove the entry at path from the builder. Returns true if it existed.
 bool mdix_builder_remove(void *builder, const char *path) ;
// Returns true if the builder contains an entry at path.
 bool mdix_builder_has_key(const void *builder, const char *path) ;
 char *mdix_builder_get_string(const void *builder, const char *path) ;
 int32_t mdix_builder_get_int(const void *builder, const char *path) ;
// Serialize the builder's entries and write them to a .mdix file at path.
// Parent directories are created if they do not exist.
// Returns true on success.
 bool mdix_builder_save(const void *builder, const char *path) ;