ffi/builds/build_1236/MdixNative.cs


        /// <summary>
        ///  Select all values matching a dotted path pattern and return them as a JSON array.
        ///
        ///  Use `*` as a wildcard for a single path segment:
        ///    "server.*"   → all direct children of the server table property
        ///    "weapons.*"  → all direct children of the weapons object
        ///
        ///  LIMITATION: bracket-indexed paths (enemies[0].name) do not match dot
        ///  wildcards. Use mdix_get_array_length + mdix_get_* with explicit indexed
        ///  paths for array item access from the C# side.
        ///
        ///  Caller must free the returned string with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_select_many_as_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_select_many_as_json(void* handle, byte* pattern);

        /// <summary>
        ///  Returns true if a value exists at path.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_exists", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_exists(void* handle, byte* path);

        /// <summary>
        ///  Returns the direct child key names under prefix as a C string array.
        ///  Pass an empty string for top-level keys.
        ///  Writes the count to out_count. Caller must free with mdix_free_string_array().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** mdix_get_keys(void* handle, byte* prefix, int* out_count);

        /// <summary>
        ///  Free a C string returned by any mdix getter function.
        ///  Do NOT call on the static pointer from mdix_version(). Passing null is safe.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string(byte* s);

        /// <summary>
        ///  Free a string array returned by mdix_get_keys() or mdix_get_all_keys().
        ///  count must match the value written to out_count by the original call.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string_array", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string_array(byte** arr, int count);

        /// <summary>
        ///  Returns a pointer to the last error string set on this thread, or null if
        ///  no error is pending. Valid only until the next mdix_* call on this thread.
        ///  Do NOT free this pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_last_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_last_error();

        /// <summary>
        ///  Clear the pending error on this thread.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_clear_error", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_clear_error();

        /// <summary>
        ///  Export the loaded data as a JSON string.
        ///  Enum values are emitted as plain integers (not as JSON objects).
        ///  Pass indented=true for pretty-printed output.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_to_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_to_json(void* handle, [MarshalAs(UnmanagedType.U1)] bool indented);

        /// <summary>
        ///  Export the loaded data as .mdix source text.
        ///  Caller must free with mdix_free_string().
        ///
        ///  FIX: previously returned *mut c_void — corrected to *mut c_char.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_to_mdix", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_to_mdix(void* handle, MdixFormatMode mode);

        /// <summary>
        ///  Export the loaded data as TOML.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_to_toml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_to_toml(void* handle);

        /// <summary>
        ///  Format .mdix source text according to the given mode.
        ///  Minified mode removes all unnecessary whitespace.
        ///  Compact mode collapses blank lines and strips trailing whitespace.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_format_source", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_format_source(byte* source, MdixFormatMode mode);

        /// <summary>
        ///  Minify .mdix source — remove all unnecessary whitespace using the tokenizer.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_minify_source", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_minify_source(byte* source);

        /// <summary>
        ///  Compact .mdix source — strip trailing whitespace and collapse blank lines.
        ///  Preserves indentation and code structure. Lighter than minify.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_compact_source", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_compact_source(byte* source);

        /// <summary>
        ///  Strip all comments from .mdix source. Content inside string literals is preserved.
        ///  Caller must free with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_strip_comments", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_strip_comments(byte* source);

        /// <summary>
        ///  Create an empty builder for constructing new save data.
        ///  Caller must free with mdix_builder_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_builder_new();

        /// <summary>
        ///  Create a builder pre-populated from an existing loaded handle.
        ///
        ///  Copies all root-level structural values from the handle into the builder.
        ///  Synthetic indexed children (tags[0], server.host, etc.) are stripped so
        ///  only values that map to valid .mdix identifiers remain editable.
        ///
        ///  Typical use: load a save file → fork into builder → change a few fields
        ///  → mdix_builder_save back to disk. The original handle remains valid.
        ///
        ///  Caller must free the returned builder with mdix_builder_free when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_from_handle", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_builder_from_handle(void* handle);

        /// <summary>
        ///  Free a builder created by mdix_builder_new or mdix_builder_from_handle.
        ///  Passing null is safe. Do not call twice on the same pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_builder_free(void* builder);

        /// <summary>
        ///  Returns the number of entries currently in the builder, or -1 if null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_entry_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_entry_count(void* builder);

        /// <summary>
        ///  Clear all entries from the builder. Returns true on success.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_clear", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_clear(void* builder);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_string(void* builder, byte* path, byte* value);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_int(void* builder, byte* path, int value);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_long", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_long(void* builder, byte* path, long value);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_float(void* builder, byte* path, float value);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_double(void* builder, byte* path, double value);

        [DllImport(__DllName, EntryPoint = "mdix_builder_set_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_set_bool(void* builder, byte* path, [MarshalAs(UnmanagedType.U1)] bool value);

        /// <summary>
        ///  Remove the entry at path from the builder. Returns true if it existed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_remove", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_remove(void* builder, byte* path);

        /// <summary>
        ///  Returns true if the builder contains an entry at path.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_builder_has_key", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_builder_has_key(void* builder, byte* path);

        [DllImport(__DllName, EntryPoint = "mdix_builder_get_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_builder_get_string(void* builder, byte* path);

        [DllImport(__DllName, EntryPoint = "mdix_builder_get_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_builder_get_int(void* builder, byte* path);
